Fixed alignment for right messages in chat

--- a/cs-97-react/src/components/ChatMessages/ChatMessage.css
+++ b/cs-97-react/src/components/ChatMessages/ChatMessage.css
@@ -86,3 +86,30 @@
   margin-left: 5px;
   padding-bottom: 3px;
 } */
+
+
+/* .chat-message-right{
+  height: 100%;
+  line-height: 30px;
+}
+
+.chat-messageText-left{
+  height: 100%;
+  line-height: 13px;
+} */
+
+.chat-message-right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .chat-messageText-right{
+  margin: auto;
+} */
+
+/* .chat-message-left{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
